k8s/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: nautis
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
